// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_mybucket_ResourceGroup_C1D7AF27\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"mybucket\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_mybucket_StorageAccount_A0150B8A\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_mybucket_ResourceGroup_C1D7AF27.location}\\",
        \\"name\\": \\"mybucketc8045fccc85a7ef4\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_mybucket_ResourceGroup_C1D7AF27.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"public\\",
        \\"name\\": \\"mybucketc8045fccc85a7ef4\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_mybucket_StorageAccount_A0150B8A.name}\\"
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "azure": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
              "version": "3.0.16",
            },
            "id": "azure",
            "path": "root/azure",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
          "my_bucket": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                  "version": "3.0.16",
                },
                "id": "Bucket",
                "path": "root/my_bucket/Bucket",
              },
              "ResourceGroup": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "3.0.16",
                },
                "id": "ResourceGroup",
                "path": "root/my_bucket/ResourceGroup",
              },
              "StorageAccount": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "3.0.16",
                },
                "id": "StorageAccount",
                "path": "root/my_bucket/StorageAccount",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "id": "my_bucket",
            "path": "root/my_bucket",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_mybucket_ResourceGroup_C1D7AF27\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"mybucket\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_mybucket_StorageAccount_A0150B8A\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_mybucket_ResourceGroup_C1D7AF27.location}\\",
        \\"name\\": \\"mybucketc8045fccc85a7ef4\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_mybucket_ResourceGroup_C1D7AF27.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"mybucketc8045fccc85a7ef4\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_mybucket_StorageAccount_A0150B8A.name}\\"
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "azure": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
              "version": "3.0.16",
            },
            "id": "azure",
            "path": "root/azure",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
          "my_bucket": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                  "version": "3.0.16",
                },
                "id": "Bucket",
                "path": "root/my_bucket/Bucket",
              },
              "ResourceGroup": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "3.0.16",
                },
                "id": "ResourceGroup",
                "path": "root/my_bucket/ResourceGroup",
              },
              "StorageAccount": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "3.0.16",
                },
                "id": "StorageAccount",
                "path": "root/my_bucket/StorageAccount",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "id": "my_bucket",
            "path": "root/my_bucket",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
